# python-proto-topy

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  README.rst  TESTING.md  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yml  github-actions.yml  python-package.yml  release.yml  test.yml
ci/: requirements.txt
docs/: conf.py  installation.rst  usage.rst
docs/reference/: index.rst  proto_topy.rst
future/: .cookiecutterrc  AUTHORS.rst  CHANGELOG.rst  CONTRIBUTING.rst
requirements/: ci.txt
src/: proto_topy.py
src/proto_topy/: __init__.py  entities.py
tests/: test_proto_topy.py  tox_mac.sh
tests/cassettes/test_proto_topy/: test_google_addressbook_example.yaml
