[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "proto-topy"
description = "Compile protobuf strings into Python module objects at runtime."
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Intended Audience :: Developers",
    'Programming Language :: Python :: 3',
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: Implementation :: CPython',
    "Operating System :: OS Independent"
]
dependencies = ["protobuf>=3.20.3"]
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "proto_topy.__version__"}

[project.urls]
homepage = "https://github.com/decitre/python-proto-topy"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-recording",
    "pytest-cov",
    "urllib3",
    "bumpver",
    "ruff",
    "pre-commit",
    "tox",
    "tox-uv",
    "build",
    "twine"
]
ci = [
    "tox>=4.12.1",
    "tox-gh>=1.2",
    "tox-uv",
]

[tool.ruff]
line-length = 88
exclude = [
    ".tox",
    ".eggs",
    "build",
    "dist",
    "__pycache__",
    "docs/source/conf.py",
    "old",
    "env",
]
lint.ignore = ["COM812", "D103", "E501", "F401", "F403"]
lint.select = ["B", "B9", "C", "E", "F", "W", "I001"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"

[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.bumpver]
current_version = "2.0.0rc0"
version_pattern = "MAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"src/proto_topy.py" = [
    '__version__ = "{version}"',
]

[tool.tox]
env_list = [
    "clean",
    "lint",
    "py310",
    "py311",
    "py312",
    "py313",
    "py314",
    "report",
]
requires = ["tox-uv"]
ignore_basepython_conflict = true
env.py310.base_python = "{env:TOXPYTHON:python3.10}"
env.py311.base_python = "{env:TOXPYTHON:python3.11}"
env.py312.base_python = "{env:TOXPYTHON:python3.12}"
env.py313.base_python = "{env:TOXPYTHON:python3.13}"
env.py314.base_python = "{env:TOXPYTHON:python3.14}"

[tool.tox.env_run_base]
set_env.PYTHONPATH = "{toxinidir}/src"
set_env.PYTHONUNBUFFERED = "yes"
pass_env = ["*"]
use_develop = false
deps = [
    "pytest",
    "pytest-cov",
    "requests",
    "pytest-recording",
    "urllib3",
]
commands = [
    ["pytest", "--cov=src", "--cov-append", "--cov-report=term-missing", "--cov-report=xml", "-vv", "tests"],
]

[tool.tox.env.clean]
base_python = "{env:TOXPYTHON:python3}"
skip_install = true
deps = ["coverage"]
commands = [["coverage", "erase"]]

[tool.tox.env.lint]
base_python = "{env:TOXPYTHON:python3}"
deps = ["ruff", "ty", "pytest", "requests", "pytest-recording"]
commands = [
    ["ruff", "check", "."],
    ["ty", "check"],
]

[tool.tox.env.report]
base_python = "{env:TOXPYTHON:python3}"
skip_install = true
deps = ["coverage"]
commands = [
    ["coverage", "report"],
    ["coverage", "html"],
    ["coverage", "xml"],
]

[tool.coverage.run]
omit = ["*/tests/*"]

[tool.coverage.report]
omit = ["*/tests/*"]

[tool.tox.env.codecov]
base_python = "{env:TOXPYTHON:python3}"
skip_install = true
deps = ["codecov"]
commands = [["codecov"]]

[tool.tox.gh.python]
"3.14" = ["py314"]
"3.13" = ["py313"]
"3.12" = ["py312"]
"3.11" = ["py311"]
"3.10" = ["py310"]
